--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 </head>
 <body>
     <div class="header">
-        <div sttyle="logo"><p>HeaderLogo</p></div>
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
-
-    <p>This website is awesome</p>
-    <p>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <button>Sign Up</button>
-    <img src=".//img/istockphoto-1071204136-612x612.jpg" alt="this is a placeholder image">
+            <div sttyle="logo"><p>HeaderLogo</p></div>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+    
+        <div class="headerContent">
+            <div class="headerLeft">
+                <p>This website is awesome</p>
+                <p>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign Up</button>
+                <img src=".//img/istockphoto-1071204136-612x612.jpg" alt="this is a placeholder image">
+             </div>
+        </div>
     </div>
+
 
     <div class="content">
 
