--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 </head>
 <body>
     <div class="header">
-            <div sttyle="logo"><p>HeaderLogo</p></div>
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
-    
+        <div class="headerTop">
+            <div class="Logo">Header Logo</div>
+                <div class="links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+                </div>
+        </div>
+
         <div class="headerContent">
             <div class="headerLeft">
-                <p>This website is awesome</p>
-                <p>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign Up</button>
-                <img src=".//img/istockphoto-1071204136-612x612.jpg" alt="this is a placeholder image">
-             </div>
+                <div class="Main">
+                <strong><p>This website is awesome</p></strong>
+                </div>
+                <span><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p></span>
+                <button><strong>Sign Up</strong></button>
+            </div>
+            <img src=".//img/istockphoto-1071204136-612x612.jpg" alt="this is a placeholder image">
         </div>
-    </div>
 
 
     <div class="content">
@@ -31,5 +36,9 @@
     <div class="footer">
 
     </div>
+    
+</div>
 </body>
+
+
 </html>
