landing page done question mark

--- a/index.html
+++ b/index.html
@@ -67,20 +67,18 @@
                         <div class="call">
                            <div class="calltext">
                                 <ititle>Call to action! It's time!</ititle>
-                                <p>sign up for our produc by clicking that button right over there!</p>
+                                <p>sign up for our product by clicking that button right over there!</p>
                            </div>
-                            <button>Sign Up</button>
-                    </div>
-
-
-
+                            <div class="bttnbox"><button class="signup">Sign Up</button></div>
+                        </div>
                     </div>
                 </div>
-</div>
-
+            </div>
     </div>
 
     <div class="footer">
+
+        <p>Copyright &copy; Eva's Wild Ride 2024 + image of a cat i stole from google (sorry)</p>
 
     </div>
     
